<resources>
    <string name="app_name">SegundaProva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exemplo">Modelo Aqui</string>
    <string name="exemploAno">Ano Aqui</string>
    <string name="exemploPreco">Preço Aqui</string>
    <string name="nao">NÃO</string>
    <string name="sim">SIM</string>
    <string name="modelo">Modelo</string>
    <string name="cor">Cor</string>
    <string name="ano">Ano</string>
    <string name="preco">Preço</string>
    <string name="estoque">Estoque</string>
    <string name="pronta_entrega">Pronta Entrega</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="adicionar">Adicionar</string>
    <string name="voltar">Voltar</string>
    <string name="editar">Editar</string>
    <string name="desenvolvido_por">Desenvolvido por:</string>
    <string name="jodeilson_weslley">Jodeilson Weslley</string>
    <string name="orientador">Orientador:</string>
    <string name="taniro_chacon">Taniro Chacon</string>
    <string name="_2020_2">2020.2</string>
    <string name="per_odo">Período:</string>
    <string name="disciplina">Disciplina:</string>
    <string name="programa_o_para_dispositivos_m_veis">Programação para dispositivos móveis</string>
</resources>