<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desenvolvido_por"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/modeloEdit"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginVertical="90dp"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientador"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/corEdit"
                app:layout_constraintTop_toBottomOf="@+id/textView"

                android:layout_marginTop="40sp"
                />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_odo"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintRight_toLeftOf="@+id/anoEdit"
                android:layout_marginTop="40sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disciplina"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintRight_toLeftOf="@+id/precoEdit"
                android:layout_marginTop="40sp" />

            <TextView
                android:id="@+id/modeloEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:clickable="false"
                android:hint="@string/jodeilson_weslley"
                app:layout_constraintBottom_toBottomOf="@id/textView"
                app:layout_constraintLeft_toRightOf="@+id/textView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/corEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:clickable="false"
                android:text="@string/taniro_chacon"
                app:layout_constraintBottom_toBottomOf="@id/textView2"
                app:layout_constraintLeft_toRightOf="@+id/textView2"
                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/anoEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:clickable="false"
                android:hint="@string/_2020_2"
                app:layout_constraintBottom_toBottomOf="@id/textView3"
                app:layout_constraintLeft_toRightOf="@+id/textView3"
                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/precoEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:clickable="false"
                android:hint="@string/programa_o_para_dispositivos_m_veis"
                app:layout_constraintBottom_toBottomOf="@id/textView4"
                app:layout_constraintLeft_toRightOf="@+id/textView4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>