<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/modeloEdit"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="90dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cor"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/corEdit"
            app:layout_constraintTop_toBottomOf="@+id/textView"

            android:layout_marginTop="40sp"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ano"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintRight_toLeftOf="@+id/anoEdit"
            android:layout_marginTop="40sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preco"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintRight_toLeftOf="@+id/precoEdit"
            android:layout_marginTop="40sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estoque"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintRight_toLeftOf="@+id/estoqueEdit"
            android:layout_marginTop="40sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pronta_entrega"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintRight_toLeftOf="@+id/pEntregaId"
            android:layout_marginTop="40sp" />

        <Button
            android:id="@+id/salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:backgroundTint="@color/confirmarAcao"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintHorizontal_bias="0.3"
            />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:backgroundTint="@color/cancelarAcao"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintHorizontal_bias="0.7" />

        <ToggleButton
            android:id="@+id/pEntregaId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/textView6"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintBottom_toBottomOf="@id/textView6"
            android:textOff="@string/nao"
            android:textOn="@string/sim"/>

        <EditText
            android:id="@+id/modeloEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/modelo"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            app:layout_constraintLeft_toRightOf="@+id/textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <EditText
            android:id="@+id/corEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/cor"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@id/textView2"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <EditText
            android:id="@+id/anoEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="ano"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/textView3"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <EditText
            android:id="@+id/precoEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/preco"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/textView4"
            app:layout_constraintLeft_toRightOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <EditText
            android:id="@+id/estoqueEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/estoque"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/textView5"
            app:layout_constraintLeft_toRightOf="@+id/textView5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>